--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, dicta dignissimos sunt voluptate deserunt temporibus ex eaque totam dolorem eos amet. Doloremque reiciendis vitae molestiae? Dicta culpa at nulla sint?</p>
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
